    ConcurrentModificationError in an "except:"
    clause.

  - The Session class is now present in sqlalchemy.orm.*.
    We're moving away from the usage of create_session(),
    which has non-standard defaults, for those situations
    where a one-step Session constructor is desired. Most
    users should stick with sessionmaker() for general use,
    however.

  - The include_properties and exclude_properties arguments
    to mapper() now accept Column objects as members in 
    addition to strings.  This so that same-named Column
    objects, such as those within a join(), can be
    disambiguated.

  - A warning is now emitted if a mapper is created against a
    join or other single selectable that includes multiple
    columns with the same name in its .c. collection,
    and those columns aren't explictly named as part of
    the same or separate attributes (or excluded).
    In 0.7 this warning will be an exception.   Note that
    this warning is not emitted when the combination occurs
    as a result of inheritance, so that attributes
    still allow being overridden naturally.  
    [ticket:1896].  In 0.7 this will be improved further.
    
  - The primary_key argument to mapper() can now specify
    a series of columns that are only a subset of 
    the calculated "primary key" columns of the mapped 
    selectable, without an error being raised.  This
    helps for situations where a selectable's effective
    primary key is simpler than the number of columns
    in the selectable that are actually marked as 
    "primary_key", such as a join against two 
    tables on their primary key columns [ticket:1896].
    
  - An object that's been deleted now gets a flag
    'deleted', which prohibits the object from
    being re-add()ed to the session, as previously
    the object would live in the identity map
    silently until its attributes were accessed.
    The make_transient() function now resets this
    flag along with the "key" flag.
